src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/type-arg-not-inferred.tessla
def foo[T](a: Int) := a + 5

out foo(5)